# TwitchStreams

./: .gitignore
AbstractClasses/: AbstractClasses.cs
BinarySearch/: BinarySearch.cpp
Concurrency/: .clang-format  CMakeLists.txt  main.cpp  main10.cpp  main11.cpp  main12.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp  main9.cpp
DelegatesAndEvents/: DelegatesAndEvents.sln
DelegatesAndEvents/DelegatesAndEvents/: Clock.cs  DelegatesAndEvents.csproj  IAlertable.cs  JackCimberly.cs  Program.cs  The_Think3r.cs
DelegatesAndEvents/DelegatesAndEvents/Properties/: AssemblyInfo.cs
Encryption/: CMakeLists.txt  client.cpp  net.h  security.hpp  server.cpp
ExoticDataStructures/: CMakeLists.txt
ExoticDataStructures/ExoticDataStructures/: CMakeLists.txt  COLA.h  ExoticDataStructures.cpp
Inheritance/: Inheritance.cs
ListsIteratorsIndexers/: ListsIteratorsIndexers.sln
ListsIteratorsIndexers/ListsIteratorsIndexers/: LinkedList.cs  Program.cs
ModelViewControllerDemo/: ClientController.cs  ClientModel.cs  ClientView.cs  Clients.sql  ClientsView.cs  Database.cs  IView.cs  Program.cs
OpenGLBasics/: CMakeLists.txt  Quellen.txt
OpenGLBasics/assets/shaders/: debug.frag  default.frag  default.vert
OpenGLBasics/src/: Application.cpp  Application.hpp  Application.inc  ElementBufferObject.cpp  ElementBufferObject.hpp  GLDataUsagePattern.hpp  GlUtils.cpp  GlUtils.hpp  Image.cpp  Image.hpp  OpenGLVersion.hpp  Renderer.cpp  Renderer.hpp  Sandbox.cpp  Sandbox.hpp  ShaderProgram.cpp  ShaderProgram.hpp  StbImageInclude.cpp  Texture.cpp  Texture.hpp  VertexArrayObject.cpp  VertexArrayObject.hpp  VertexAttributeDefinition.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferObject.cpp  VertexBufferObject.hpp  WindowSize.hpp  main.cpp
OpenGLBasics/src/expected/: expected.hpp
OpenGLBasics/src/hash/: hash.cpp  hash.hpp
OpenGLBasics/src/strong_type/: strong_type.hpp
RayTracingInOneWeekend/: .clang-format  CMakeLists.txt  Camera.hpp  Color.hpp  Hittable.hpp  Material.hpp  Ray.hpp  Sphere.hpp  Utility.hpp  Vec3.hpp  image.ppm  main.cpp  stb_image.h  stb_image_implementation.cpp  stb_image_write.h
Reflection/: Reflection.cs
RingBuffer/: RingBuffer.cs
SmartPointers/: SmartPointer.s.cpp
StackVsHeap/C/: CMakeLists.txt  main.c
StackVsHeap/Cs/StackVsHeap/: StackVsHeap.sln
StackVsHeap/Cs/StackVsHeap/StackVsHeap/: Program.cs  StackVsHeap.csproj
StackVsHeap/Cs/StackVsHeap/StackVsHeap/Properties/: AssemblyInfo.cs
TemplateMetaProgramming/: CMakeLists.txt  main.cpp
UnitTestsStream/: UnitTestsStream.sln
UnitTestsStream/Tests/: Tests.csproj  Vector3Tests.cs
UnitTestsStream/UnitTestsStream/: Program.cs  Vector3.cs
